--- a/cr-script.ipynb
+++ b/cr-script.ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 70,
    "id": "735fe917",
    "metadata": {},
    "outputs": [],
@@ -130,6 +130,7 @@
     "import seaborn as sns\n",
     "import missingno as msno\n",
     "from io import BytesIO\n",
+    "from openpyxl import load_workbook\n",
     "\n",
     "\n",
     "# pip freeze > requirements.txt"
@@ -145,14 +146,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 62,
    "id": "1c637b33",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Use raw GitHub URLs\n",
-    "url_homicides = \"https://github.com/FelipeVillota/costa-rica-presentation/raw/main/data/raw/homicides-2010-2024.xlsx\"\n",
-    "url_seizures = \"https://github.com/FelipeVillota/costa-rica-presentation/raw/main/data/raw/seizures-2019-2024.xlsx\"\n",
+    "url_homicides = \"https://github.com/FelipeVillota/costa-rica-presentation/raw/main/data/raw/homicides-2010-2024.xlsx\" # Multiple sheets \n",
+    "url_seizures = \"https://github.com/FelipeVillota/costa-rica-presentation/raw/main/data/raw/seizures-2019-2024.xlsx\" # This is already the sheet we want\n",
     "\n",
     "# Get file content\n",
     "response1 = requests.get(url_homicides)\n",
@@ -161,45 +162,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "1fd16654",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load all sheets from each Excel file as separate DataFrames\n",
-    "homicides_sheets = pd.read_excel(BytesIO(response1.content), engine='openpyxl', sheet_name=None)\n",
+    "# Seizures data is already in a single sheet, so we can load it directly\n",
     "seizures_sheets = pd.read_excel(BytesIO(response2.content), engine='openpyxl', sheet_name=None)\n",
-    "seizures_df = seizures_sheets['8']  \n",
-    "\n",
-    "# Here there are dictionaries where keys are sheet names and values are DataFrames\n",
-    "# \n",
-    "homicides_sheets = list(homicides_sheets.values())[0]"
+    "seizures_df = seizures_sheets['8']  \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
+   "id": "80d1de67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Homicide data is in multiple sheets, so we need to load all sheets and then combine them \n",
+    "# Load all sheets from the Excel file as separate DataFrames\n",
+    "homicides_sheets = pd.read_excel(BytesIO(response1.content), engine='openpyxl', sheet_name=None)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
    "id": "f337e34c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'histórico-mensual':            país         mes   año  homicidios_país_mes  \\\n",
+       " 0    Costa Rica       enero  2010                   44   \n",
+       " 1    Costa Rica     febrero  2010                   45   \n",
+       " 2    Costa Rica       marzo  2010                   47   \n",
+       " 3    Costa Rica       abril  2010                   42   \n",
+       " 4    Costa Rica        mayo  2010                   39   \n",
+       " ..          ...         ...   ...                  ...   \n",
+       " 175  Costa Rica      agosto  2024                   75   \n",
+       " 176  Costa Rica  septiembre  2024                   69   \n",
+       " 177  Costa Rica     octubre  2024                   73   \n",
+       " 178  Costa Rica   noviembre  2024                   73   \n",
+       " 179  Costa Rica   diciembre  2024                   80   \n",
+       " \n",
+       "      homicidios_país_acumulado_mes  homicidios_país_año  \n",
+       " 0                              756                  527  \n",
+       " 1                              690                  527  \n",
+       " 2                              699                  527  \n",
+       " 3                              645                  527  \n",
+       " 4                              701                  527  \n",
+       " ..                             ...                  ...  \n",
+       " 175                            789                  880  \n",
+       " 176                            712                  880  \n",
+       " 177                            790                  880  \n",
+       " 178                            778                  880  \n",
+       " 179                            769                  880  \n",
+       " \n",
+       " [180 rows x 6 columns],\n",
+       " 'tasa-país':           país   año  homicidios_país_año  habitantes_país  tasa_100mil_país\n",
+       " 0   Costa Rica  2010                  527          4533894              11.6\n",
+       " 1   Costa Rica  2011                  474          4592147              10.3\n",
+       " 2   Costa Rica  2012                  407          4652451               8.7\n",
+       " 3   Costa Rica  2013                  411          4713164               8.7\n",
+       " 4   Costa Rica  2014                  477          4773119              10.0\n",
+       " 5   Costa Rica  2015                  557          4832521              11.5\n",
+       " 6   Costa Rica  2016                  578          4890372              11.8\n",
+       " 7   Costa Rica  2017                  603          4947481              12.2\n",
+       " 8   Costa Rica  2018                  585          5003393              11.7\n",
+       " 9   Costa Rica  2019                  564          5057999              11.2\n",
+       " 10  Costa Rica  2020                  570          5111238              11.2\n",
+       " 11  Costa Rica  2021                  588          5163038              11.4\n",
+       " 12  Costa Rica  2022                  654          5213274              12.5\n",
+       " 13  Costa Rica  2023                  905          5262237              17.2\n",
+       " 14  Costa Rica  2024                  880          5309625              16.6,\n",
+       " 'tasa-provincia':           país   provincia   año  homicidios_país_año  habitantes_país  \\\n",
+       " 0   Costa Rica       Limón  2023                  905          5262237   \n",
+       " 1   Costa Rica  Puntarenas  2023                  905          5262237   \n",
+       " 2   Costa Rica  Guanacaste  2023                  905          5262237   \n",
+       " 3   Costa Rica    San José  2023                  905          5262237   \n",
+       " 4   Costa Rica     Cartago  2023                  905          5262237   \n",
+       " 5   Costa Rica    Alajuela  2023                  905          5262237   \n",
+       " 6   Costa Rica     Heredia  2023                  905          5262237   \n",
+       " 7   Costa Rica       Limón  2024                  880          5309625   \n",
+       " 8   Costa Rica  Puntarenas  2024                  880          5309625   \n",
+       " 9   Costa Rica  Guanacaste  2024                  880          5309625   \n",
+       " 10  Costa Rica    San José  2024                  880          5309625   \n",
+       " 11  Costa Rica     Cartago  2024                  880          5309625   \n",
+       " 12  Costa Rica    Alajuela  2024                  880          5309625   \n",
+       " 13  Costa Rica     Heredia  2024                  880          5309625   \n",
+       " \n",
+       "     tasa_100mil_país  homicidios_provincia_año  habitantes_provincia  \\\n",
+       " 0               17.2                       213                474527   \n",
+       " 1               17.2                       149                516326   \n",
+       " 2               17.2                       100                410055   \n",
+       " 3               17.2                       219               1696265   \n",
+       " 4               17.2                        74                550655   \n",
+       " 5               17.2                       103               1068258   \n",
+       " 6               17.2                        47                546139   \n",
+       " 7               16.6                       181                479090   \n",
+       " 8               16.6                       154                521908   \n",
+       " 9               16.6                        75                415224   \n",
+       " 10              16.6                       250               1706845   \n",
+       " 11              16.6                        75                553463   \n",
+       " 12              16.6                       106               1080565   \n",
+       " 13              16.6                        39                552530   \n",
+       " \n",
+       "     tasa_100mil_provincia  \n",
+       " 0                    44.9  \n",
+       " 1                    28.9  \n",
+       " 2                    24.4  \n",
+       " 3                    12.9  \n",
+       " 4                    13.4  \n",
+       " 5                     9.6  \n",
+       " 6                     8.6  \n",
+       " 7                    37.8  \n",
+       " 8                    29.5  \n",
+       " 9                    18.1  \n",
+       " 10                   14.6  \n",
+       " 11                   13.6  \n",
+       " 12                    9.8  \n",
+       " 13                    7.1  ,\n",
+       " 'homicidios-múltiples':          país   año       tipo  casos  víctimas\n",
+       " 0  Costa Rica  2023      Doble   57.0     114.0\n",
+       " 1  Costa Rica  2023     Triple   12.0      36.0\n",
+       " 2  Costa Rica  2023  Cuádruple    2.0       8.0\n",
+       " 3  Costa Rica  2023  Quíntuple    NaN       NaN\n",
+       " 4  Costa Rica  2023    Óctuple    NaN       NaN\n",
+       " 5  Costa Rica  2024      Doble   70.0     140.0\n",
+       " 6  Costa Rica  2024     Triple   10.0      30.0\n",
+       " 7  Costa Rica  2024  Cuádruple    1.0       4.0\n",
+       " 8  Costa Rica  2024  Quíntuple    NaN       NaN\n",
+       " 9  Costa Rica  2024    Óctuple    NaN       NaN}"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# All sheets\n",
+    "homicides_sheets\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "3068858d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "First sheet from homicidios file:\n",
-      "         país      mes   año  homicidios_país_mes  \\\n",
-      "0  Costa Rica    enero  2010                   44   \n",
-      "1  Costa Rica  febrero  2010                   45   \n",
-      "2  Costa Rica    marzo  2010                   47   \n",
-      "3  Costa Rica    abril  2010                   42   \n",
-      "4  Costa Rica     mayo  2010                   39   \n",
-      "\n",
-      "   homicidios_país_acumulado_mes  homicidios_país_año  \n",
-      "0                            756                  527  \n",
-      "1                            690                  527  \n",
-      "2                            699                  527  \n",
-      "3                            645                  527  \n",
-      "4                            701                  527  \n",
       "         País Provincia    Cantón     Distrito   Cocaína Eventos  \\\n",
       "0  Costa Rica  Alajuela  Alajuela     Alajuela             161.0   \n",
       "1  Costa Rica  Alajuela  Alajuela     San José             144.0   \n",
@@ -224,18 +341,12 @@
     }
    ],
    "source": [
-    "\n",
-    "# Preview first sheet from homicides\n",
-    "print(\"First sheet from homicidios file:\")\n",
-    "print(homicides_sheets.head())\n",
-    "\n",
-    "\n",
     "print(seizures_df.head())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 90,
    "id": "f23ccadc",
    "metadata": {},
    "outputs": [
@@ -244,145 +355,18 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "All sheets in homicides file:\n",
-      "Sheet: país\n",
-      "0    Costa Rica\n",
-      "1    Costa Rica\n",
-      "2    Costa Rica\n",
-      "3    Costa Rica\n",
-      "4    Costa Rica\n",
-      "Name: país, dtype: object\n",
-      "-----\n",
-      "Sheet: mes\n",
-      "0      enero\n",
-      "1    febrero\n",
-      "2      marzo\n",
-      "3      abril\n",
-      "4       mayo\n",
-      "Name: mes, dtype: object\n",
-      "-----\n",
-      "Sheet: año\n",
-      "0    2010\n",
-      "1    2010\n",
-      "2    2010\n",
-      "3    2010\n",
-      "4    2010\n",
-      "Name: año, dtype: int64\n",
-      "-----\n",
-      "Sheet: homicidios_país_mes\n",
-      "0    44\n",
-      "1    45\n",
-      "2    47\n",
-      "3    42\n",
-      "4    39\n",
-      "Name: homicidios_país_mes, dtype: int64\n",
-      "-----\n",
-      "Sheet: homicidios_país_acumulado_mes\n",
-      "0    756\n",
-      "1    690\n",
-      "2    699\n",
-      "3    645\n",
-      "4    701\n",
-      "Name: homicidios_país_acumulado_mes, dtype: int64\n",
-      "-----\n",
-      "Sheet: homicidios_país_año\n",
-      "0    527\n",
-      "1    527\n",
-      "2    527\n",
-      "3    527\n",
-      "4    527\n",
-      "Name: homicidios_país_año, dtype: int64\n",
-      "-----\n",
-      "\n",
-      "Only sheet in seizures file:\n",
-      "Sheet: País\n",
-      "0    Costa Rica\n",
-      "1    Costa Rica\n",
-      "2    Costa Rica\n",
-      "3    Costa Rica\n",
-      "4    Costa Rica\n",
-      "Name: País, dtype: object\n",
-      "-----\n",
-      "Sheet: Provincia\n",
-      "0    Alajuela\n",
-      "1    Alajuela\n",
-      "2    Alajuela\n",
-      "3    Alajuela\n",
-      "4    Alajuela\n",
-      "Name: Provincia, dtype: object\n",
-      "-----\n",
-      "Sheet: Cantón\n",
-      "0    Alajuela\n",
-      "1    Alajuela\n",
-      "2    Alajuela\n",
-      "3    Alajuela\n",
-      "4    Alajuela\n",
-      "Name: Cantón, dtype: object\n",
-      "-----\n",
-      "Sheet: Distrito\n",
-      "0       Alajuela\n",
-      "1       San José\n",
-      "2       Carrizal\n",
-      "3    San Antonio\n",
-      "4        Guácima\n",
-      "Name: Distrito, dtype: object\n",
-      "-----\n",
-      "Sheet:  Cocaína Eventos\n",
-      "0    161.0\n",
-      "1    144.0\n",
-      "2      9.0\n",
-      "3     34.0\n",
-      "4     51.0\n",
-      "Name:  Cocaína Eventos, dtype: float64\n",
-      "-----\n",
-      "Sheet: Cocaína (kg)\n",
-      "0    0.05825\n",
-      "1    0.70250\n",
-      "2    0.00625\n",
-      "3    0.32975\n",
-      "4    0.93440\n",
-      "Name: Cocaína (kg), dtype: float64\n",
-      "-----\n",
-      "Sheet: Crack Eventos\n",
-      "0    370.0\n",
-      "1    289.0\n",
-      "2      9.0\n",
-      "3     60.0\n",
-      "4    155.0\n",
-      "Name: Crack Eventos, dtype: float64\n",
-      "-----\n",
-      "Sheet: Crack (piedras)\n",
-      "0     6644.400000\n",
-      "1    10406.666667\n",
-      "2      204.000000\n",
-      "3      913.333333\n",
-      "4     5812.333333\n",
-      "Name: Crack (piedras), dtype: float64\n",
-      "-----\n",
-      "Sheet: Marihuana Eventos\n",
-      "0    769.0\n",
-      "1    478.0\n",
-      "2     21.0\n",
-      "3    449.0\n",
-      "4    450.0\n",
-      "Name: Marihuana Eventos, dtype: float64\n",
-      "-----\n",
-      "Sheet: Marihuana (kg)\n",
-      "0    14.33302\n",
-      "1     1.45790\n",
-      "2     0.03950\n",
-      "3     1.06203\n",
-      "4     2.08663\n",
-      "Name: Marihuana (kg), dtype: float64\n",
-      "-----\n",
-      "Sheet: Año\n",
-      "0    2019.0\n",
-      "1    2019.0\n",
-      "2    2019.0\n",
-      "3    2019.0\n",
-      "4    2019.0\n",
-      "Name: Año, dtype: float64\n",
-      "-----\n"
+      "All sheets in homicides file:\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'items'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[90]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Iterate through them:\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33mAll sheets in homicides file:\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m sheet_name, df \u001b[38;5;129;01min\u001b[39;00m \u001b[43mhomicides_sheets\u001b[49m\u001b[43m.\u001b[49m\u001b[43mitems\u001b[49m():\n\u001b[32m      4\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mSheet: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00msheet_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m      5\u001b[39m     \u001b[38;5;28mprint\u001b[39m(df.head())\n",
+      "\u001b[31mAttributeError\u001b[39m: 'list' object has no attribute 'items'"
      ]
     }
    ],
@@ -392,13 +376,7 @@
     "for sheet_name, df in homicides_sheets.items():\n",
     "    print(f\"Sheet: {sheet_name}\")\n",
     "    print(df.head())\n",
-    "    print(\"-----\")\n",
-    "\n",
-    "print(\"\\nOnly sheet in seizures file:\")\n",
-    "for sheet_name, df in seizures_df.items():\n",
-    "    print(f\"Sheet: {sheet_name}\")\n",
-    "    print(df.head())\n",
-    "    print(\"-----\")"
+    "    print(\"-----\")\n"
    ]
   },
   {
