--- a/cr-script.ipynb
+++ b/cr-script.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 24,
    "id": "a1112678",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 25,
    "id": "898046a7",
    "metadata": {},
    "outputs": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 26,
    "id": "793fd425",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 27,
    "id": "735fe917",
    "metadata": {},
    "outputs": [],
@@ -146,11 +146,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 28,
    "id": "1c637b33",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Both datasets are in the repository, so we can use raw GitHub URLs to access them directly.\n",
     "# Use raw GitHub URLs\n",
     "url_homicides = \"https://github.com/FelipeVillota/costa-rica-presentation/raw/main/data/raw/homicides-2010-2024.xlsx\" # Multiple sheets \n",
     "url_seizures = \"https://github.com/FelipeVillota/costa-rica-presentation/raw/main/data/raw/seizures-2019-2024.xlsx\" # This is already the sheet we want\n",
@@ -162,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "1fd16654",
    "metadata": {},
    "outputs": [],
@@ -174,20 +175,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "80d1de67",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "# Homicide data is in multiple sheets, so we need to load all sheets and then combine them \n",
-    "# Load all sheets from the Excel file as separate DataFrames\n",
-    "homicides_sheets = pd.read_excel(BytesIO(response1.content), engine='openpyxl', sheet_name=None)\n"
+    "# Homicide data is in multiple sheets, we want to load only the second sheet called \"tasa-país\"\n",
+    "homicides_sheets = pd.read_excel(BytesIO(response1.content), engine='openpyxl', sheet_name=None)\n",
+    "homicides_df = homicides_sheets['tasa-país']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 31,
    "id": "f337e34c",
    "metadata": {},
    "outputs": [
@@ -297,7 +297,7 @@
        " 9  Costa Rica  2024    Óctuple    NaN       NaN}"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 32,
    "id": "3068858d",
    "metadata": {},
    "outputs": [
@@ -345,6 +345,87 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "397170da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now we want to merge the two datasets on the year column.\n",
+    " \n",
+    "# But first, we need to ensure that the year columns in both datasets are in the same format.\n",
+    "homicides_df['año'] = pd.to_datetime(homicides_df['año'], errors='coerce', format='%Y').dt.year\n",
+    "seizures_df['Año'] = pd.to_datetime(seizures_df['Año'], format='%Y').dt.year\n",
+    "\n",
+    "# And change the column name to match\n",
+    "homicides_df.rename(columns={'año': 'year'}, inplace=True)\n",
+    "seizures_df.rename(columns={'Año': 'year'}, inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "29e6c4f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# seizure data is showing values like 2019.0, so we need to convert it to int\n",
+    "seizures_df['year'] = seizures_df['year'].astype('Int64')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "fd75ffa6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now we can merge the two datasets on the 'year' column.\n",
+    "merged_df = pd.merge(homicides_df, seizures_df, on='year', how='outer')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "5c8d4e41",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 3407 entries, 0 to 3406\n",
+      "Data columns (total 15 columns):\n",
+      " #   Column               Non-Null Count  Dtype  \n",
+      "---  ------               --------------  -----  \n",
+      " 0   país                 3406 non-null   object \n",
+      " 1   year                 3406 non-null   Int64  \n",
+      " 2   homicidios_país_año  3406 non-null   float64\n",
+      " 3   habitantes_país      3406 non-null   float64\n",
+      " 4   tasa_100mil_país     3406 non-null   float64\n",
+      " 5   País                 3399 non-null   object \n",
+      " 6   Provincia            3398 non-null   object \n",
+      " 7   Cantón               3398 non-null   object \n",
+      " 8   Distrito             3398 non-null   object \n",
+      " 9    Cocaína Eventos     3398 non-null   float64\n",
+      " 10  Cocaína (kg)         3398 non-null   float64\n",
+      " 11  Crack Eventos        3398 non-null   float64\n",
+      " 12  Crack (piedras)      3398 non-null   float64\n",
+      " 13  Marihuana Eventos    3398 non-null   float64\n",
+      " 14  Marihuana (kg)       3398 non-null   float64\n",
+      "dtypes: Int64(1), float64(9), object(5)\n",
+      "memory usage: 402.7+ KB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "merged_df.head()\n",
+    "print(merged_df.info())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "8fb864c5",
    "metadata": {},
@@ -362,16 +443,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 44,
    "id": "3ced22bd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ Converted empty strings/whitespace to NA values\n"
+     ]
+    }
+   ],
    "source": [
-    "# Handle Missing/Invalid Values\n",
-    " \n",
-    "#df = df.replace('', pd.NA)  # Convert empty strings to NA\n",
-    "#df = df.replace(r'^\\s*$', pd.NA, regex=True)  # Convert whitespace to NA\n",
-    "#print(\"✓ Converted empty strings/whitespace to NA values\")"
+    "# Format Missing/Invalid Values\n",
+    "\n",
+    "merged_df = merged_df.replace('', pd.NA)  # Convert empty strings to NA\n",
+    "merged_df = merged_df.replace(r'^\\s*$', pd.NA, regex=True)  # Convert whitespace to NA\n",
+    "print(\"✓ Converted empty strings/whitespace to NA values\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "f49fd5ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 3407 entries, 0 to 3406\n",
+      "Data columns (total 15 columns):\n",
+      " #   Column               Non-Null Count  Dtype  \n",
+      "---  ------               --------------  -----  \n",
+      " 0   país                 3406 non-null   object \n",
+      " 1   year                 3406 non-null   Int64  \n",
+      " 2   homicidios_país_año  3406 non-null   float64\n",
+      " 3   habitantes_país      3406 non-null   float64\n",
+      " 4   tasa_100mil_país     3406 non-null   float64\n",
+      " 5   país                 3399 non-null   object \n",
+      " 6   provincia            3398 non-null   object \n",
+      " 7   cantón               3398 non-null   object \n",
+      " 8   distrito             3398 non-null   object \n",
+      " 9   _cocaína_eventos     3398 non-null   float64\n",
+      " 10  cocaína_(kg)         3398 non-null   float64\n",
+      " 11  crack_eventos        3398 non-null   float64\n",
+      " 12  crack_(piedras)      3398 non-null   float64\n",
+      " 13  marihuana_eventos    3398 non-null   float64\n",
+      " 14  marihuana_(kg)       3398 non-null   float64\n",
+      "dtypes: Int64(1), float64(9), object(5)\n",
+      "memory usage: 402.7+ KB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Lowercase column names and put _ between words\n",
+    "merged_df.columns = [col.lower() for col in merged_df.columns]\n",
+    "#  put _ between words\n",
+    "merged_df.columns = [re.sub(r'\\s+', '_', col.lower()) for col in merged_df.columns]\n",
+    "\n",
+    "# Remove spaces left and right\n",
+    "merged_df.columns = merged_df.columns.str.strip()\n",
+    "print(merged_df.info())"
    ]
   },
   {
