--- a/cr-script.ipynb
+++ b/cr-script.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 48,
    "id": "a1112678",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 49,
    "id": "898046a7",
    "metadata": {},
    "outputs": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 50,
    "id": "793fd425",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 51,
    "id": "735fe917",
    "metadata": {},
    "outputs": [],
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 52,
    "id": "1c637b33",
    "metadata": {},
    "outputs": [],
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 53,
    "id": "1fd16654",
    "metadata": {},
    "outputs": [],
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 54,
    "id": "80d1de67",
    "metadata": {},
    "outputs": [],
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 55,
    "id": "f337e34c",
    "metadata": {},
    "outputs": [
@@ -297,7 +297,7 @@
        " 9  Costa Rica  2024    Óctuple    NaN       NaN}"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 56,
    "id": "3068858d",
    "metadata": {},
    "outputs": [
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "id": "397170da",
    "metadata": {},
    "outputs": [],
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 58,
    "id": "29e6c4f1",
    "metadata": {},
    "outputs": [],
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 59,
    "id": "fd75ffa6",
    "metadata": {},
    "outputs": [],
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 60,
    "id": "5c8d4e41",
    "metadata": {},
    "outputs": [
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 61,
    "id": "3ced22bd",
    "metadata": {},
    "outputs": [
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 62,
    "id": "f49fd5ff",
    "metadata": {},
    "outputs": [
@@ -487,7 +487,7 @@
       " 6   provincia            3398 non-null   object \n",
       " 7   cantón               3398 non-null   object \n",
       " 8   distrito             3398 non-null   object \n",
-      " 9   _cocaína_eventos     3398 non-null   float64\n",
+      " 9   cocaína_eventos      3398 non-null   float64\n",
       " 10  cocaína_(kg)         3398 non-null   float64\n",
       " 11  crack_eventos        3398 non-null   float64\n",
       " 12  crack_(piedras)      3398 non-null   float64\n",
@@ -502,11 +502,13 @@
    "source": [
     "# Lowercase column names and put _ between words\n",
     "merged_df.columns = [col.lower() for col in merged_df.columns]\n",
-    "#  put _ between words\n",
-    "merged_df.columns = [re.sub(r'\\s+', '_', col.lower()) for col in merged_df.columns]\n",
     "\n",
     "# Remove spaces left and right\n",
     "merged_df.columns = merged_df.columns.str.strip()\n",
+    "\n",
+    "#  put _ between words\n",
+    "merged_df.columns = [re.sub(r'\\s+', '_', col.lower()) for col in merged_df.columns]\n",
+    "\n",
     "print(merged_df.info())"
    ]
   },
