--- a/cr-script.ipynb
+++ b/cr-script.ipynb
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 85,
    "id": "2d07f2e6",
    "metadata": {},
    "outputs": [
@@ -549,9 +549,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "✓ Summary saved to data/results/merged_summary-2018-2024.xlsx\n",
       "=== GENERAL DATAFRAME INFO ===\n",
       "Shape: 3398 rows × 15 cols\n",
-      "Memory Usage: 1.27 MB\n",
+      "Memory Usage: 1.30 MB\n",
       "Columns with NA: 0 / 15\n",
       "Duplicate Rows: 0 (0.0%)\n",
       "Numeric Columns: 10\n",
@@ -611,7 +612,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "e9872728-b60b-4516-aad5-04cf7e95b4ec",
+       "ref": "ad96621a-bd91-43e1-a3e0-68f789dd0833",
        "rows": [
         [
          "14",
@@ -1041,7 +1042,11 @@
     }
    ],
    "source": [
-    "def get_dataframe_summary(merged_df):\n",
+    "import pandas as pd\n",
+    "from openpyxl import Workbook\n",
+    "from openpyxl.utils.dataframe import dataframe_to_rows\n",
+    "\n",
+    "def get_dataframe_summary(merged_df, output_path='data/results/merged_summary-2018-2024.xlsx'):\n",
     "    # --- General DataFrame Info ---\n",
     "    general_info = {\n",
     "        \"Shape\": f\"{merged_df.shape[0]} rows × {merged_df.shape[1]} cols\",\n",
@@ -1069,7 +1074,32 @@
     "    # Format percentages\n",
     "    column_stats['NA_Percentage'] = column_stats['NA_Percentage'].astype(str) + '%'\n",
     "    column_stats['Duplicate_Percentage'] = column_stats['Duplicate_Percentage'].astype(str) + '%'\n",
+    "    \n",
+    "# --- Save to Excel ---\n",
+    "    with pd.ExcelWriter(output_path, engine='openpyxl') as writer:\n",
+    "        # Save general info to first sheet\n",
+    "        pd.DataFrame.from_dict(general_info, orient='index', columns=['Value'])\\\n",
+    "            .to_excel(writer, sheet_name='General Info')\n",
+    "        \n",
+    "        # Save column stats to second sheet\n",
+    "        column_stats.to_excel(writer, sheet_name='Column Stats', index=False)\n",
+    "        \n",
+    "        # Auto-adjust column widths\n",
+    "        for sheet_name in writer.sheets:\n",
+    "            sheet = writer.sheets[sheet_name]\n",
+    "            for column in sheet.columns:\n",
+    "                max_length = 0\n",
+    "                column_letter = column[0].column_letter\n",
+    "                for cell in column:\n",
+    "                    try:\n",
+    "                        if len(str(cell.value)) > max_length:\n",
+    "                            max_length = len(str(cell.value))\n",
+    "                    except:\n",
+    "                        pass\n",
+    "                adjusted_width = (max_length + 2)\n",
+    "                sheet.column_dimensions[column_letter].width = adjusted_width\n",
     "\n",
+    "    print(f\"✓ Summary saved to {output_path}\")\n",
     "    return general_info, column_stats\n",
     "\n",
     "# Run the summary\n",
