--- a/cr-script.ipynb
+++ b/cr-script.ipynb
@@ -16,6 +16,28 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4991bf7f",
+   "metadata": {},
+   "source": [
+    "Data:\n",
+    "\n",
+    "1. **Intentional Homicides in Costa Rica (2010–2024)**\n",
+    "     \n",
+    "\tFormatted data available [here](https://docs.google.com/spreadsheets/d/1-XG8sMyPwBXa6bdBCqqEPm2SrcHpKKn3YAHaBdyR-Lg/edit?gid=0#gid=0)  \n",
+    "\tSource: [Intentional Homicides CR](https://drive.google.com/file/d/1cUswepSw-r3HLU6Be3duvjsRw329MoKg/view?ts=6841b341)\n",
+    "\tNotes: There are some discrepancies in the population figures by year compared to the [INEC](https://services.inec.go.cr/proyeccionpoblacion/frmproyec.aspx)(at both national and provincial levels), but they do not affect the homicide rates per 100,000 inhabitants as reported in the source.\n",
+    "\n",
+    "2. **Seizure data (2018-2024)**\n",
+    "   \n",
+    "\tSource: [Control_de_la_Oferta_ODS_SW1 (Sheet \"8\")](https://docs.google.com/spreadsheets/d/1EhZ7hpFBpIFc375ByzMu1AIQrNnvw2FxIvXlxV5KE1E/edit?gid=661345260#gid=661345260) \n",
+    "\n",
+    "3. **Merged dataset**\n",
+    "\tAvailable here\n",
+    "\tNotes: Dataframes were combined considering geographic disaggregation and time. Leaving us with country-level observations/indicators, by year, from 2018-2014. This is the starting point for the analysis\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "80d6e936",
    "metadata": {},
    "source": [
