--- a/cr-script.ipynb
+++ b/cr-script.ipynb
@@ -16,6 +16,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2939a69a",
+   "metadata": {},
+   "source": [
+    "### Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4991bf7f",
    "metadata": {},
    "source": [
@@ -25,14 +33,16 @@
     "     \n",
     "\tFormatted data available [here](https://docs.google.com/spreadsheets/d/1-XG8sMyPwBXa6bdBCqqEPm2SrcHpKKn3YAHaBdyR-Lg/edit?gid=0#gid=0)  \n",
     "\tSource: [Intentional Homicides CR](https://drive.google.com/file/d/1cUswepSw-r3HLU6Be3duvjsRw329MoKg/view?ts=6841b341)\n",
-    "\tNotes: There are some discrepancies in the population figures by year compared to the [INEC](https://services.inec.go.cr/proyeccionpoblacion/frmproyec.aspx)(at both national and provincial levels), but they do not affect the homicide rates per 100,000 inhabitants as reported in the source.\n",
+    "\t\n",
+    "\tNotes: There are some discrepancies in the population figures by year compared to the [INEC](https://services.inec.go.cr/proyeccionpoblacion/frmproyec.aspx) (at both national and provincial levels), but they do not affect the homicide rates per 100,000 inhabitants as reported in the source.\n",
     "\n",
     "2. **Seizure data (2018-2024)**\n",
     "   \n",
     "\tSource: [Control_de_la_Oferta_ODS_SW1 (Sheet \"8\")](https://docs.google.com/spreadsheets/d/1EhZ7hpFBpIFc375ByzMu1AIQrNnvw2FxIvXlxV5KE1E/edit?gid=661345260#gid=661345260) \n",
     "\n",
     "3. **Merged dataset**\n",
-    "\tAvailable here\n",
+    "\tAvailable [here]() \n",
+    "\t\n",
     "\tNotes: Dataframes were combined considering geographic disaggregation and time. Leaving us with country-level observations/indicators, by year, from 2018-2014. This is the starting point for the analysis\n"
    ]
   },
@@ -419,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 90,
    "id": "5c8d4e41",
    "metadata": {},
    "outputs": [
@@ -429,33 +439,35 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Index: 3398 entries, 8 to 3405\n",
-      "Data columns (total 15 columns):\n",
+      "Data columns (total 14 columns):\n",
       " #   Column               Non-Null Count  Dtype  \n",
       "---  ------               --------------  -----  \n",
       " 0   país                 3398 non-null   object \n",
-      " 1   year                 3398 non-null   Int64  \n",
-      " 2   homicidios_país_año  3398 non-null   float64\n",
-      " 3   habitantes_país      3398 non-null   float64\n",
-      " 4   tasa_100mil_país     3398 non-null   float64\n",
-      " 5   País                 3398 non-null   object \n",
-      " 6   Provincia            3398 non-null   object \n",
-      " 7   Cantón               3398 non-null   object \n",
-      " 8   Distrito             3398 non-null   object \n",
-      " 9    Cocaína Eventos     3398 non-null   float64\n",
-      " 10  Cocaína (kg)         3398 non-null   float64\n",
-      " 11  Crack Eventos        3398 non-null   float64\n",
-      " 12  Crack (piedras)      3398 non-null   float64\n",
-      " 13  Marihuana Eventos    3398 non-null   float64\n",
-      " 14  Marihuana (kg)       3398 non-null   float64\n",
-      "dtypes: Int64(1), float64(9), object(5)\n",
-      "memory usage: 428.1+ KB\n",
+      " 1   provincia            3398 non-null   object \n",
+      " 2   cantón               3398 non-null   object \n",
+      " 3   distrito             3398 non-null   object \n",
+      " 4   year                 3398 non-null   Int64  \n",
+      " 5   habitantes_país      3398 non-null   float64\n",
+      " 6   homicidios_país_año  3398 non-null   float64\n",
+      " 7   tasa_100mil_país     3398 non-null   float64\n",
+      " 8   cocaína_eventos      3398 non-null   float64\n",
+      " 9   cocaína_(kg)         3398 non-null   float64\n",
+      " 10  crack_eventos        3398 non-null   float64\n",
+      " 11  crack_(piedras)      3398 non-null   float64\n",
+      " 12  marihuana_eventos    3398 non-null   float64\n",
+      " 13  marihuana_(kg)       3398 non-null   float64\n",
+      "dtypes: Int64(1), float64(9), object(4)\n",
+      "memory usage: 401.5+ KB\n",
       "None\n"
      ]
     }
    ],
    "source": [
     "merged_df.head()\n",
-    "print(merged_df.info())"
+    "print(merged_df.info())\n",
+    "\n",
+    "# Now we can save the merged dataset to a new Excel file.\n",
+    "output_file = 'data/merged/merged_data.xlsx'"
    ]
   },
   {
