--- a/cr-script.ipynb
+++ b/cr-script.ipynb
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 91,
    "id": "5c8d4e41",
    "metadata": {},
    "outputs": [
@@ -467,7 +467,9 @@
     "print(merged_df.info())\n",
     "\n",
     "# Now we can save the merged dataset to a new Excel file.\n",
-    "output_file = 'data/merged/merged_data.xlsx'"
+    "def save_merged_df(merged_df, output_path='data/merged/merged_data-2018-2024.xlsx'):\n",
+    "    merged_df.to_excel(output_path, index=False)\n",
+    "save_merged_df(merged_df)"
    ]
   },
   {
