--- a/cr-script.ipynb
+++ b/cr-script.ipynb
@@ -41,7 +41,8 @@
     "\tSource: [Control_de_la_Oferta_ODS_SW1 (Sheet \"8\")](https://docs.google.com/spreadsheets/d/1EhZ7hpFBpIFc375ByzMu1AIQrNnvw2FxIvXlxV5KE1E/edit?gid=661345260#gid=661345260) \n",
     "\n",
     "3. **Merged dataset**\n",
-    "\tAvailable [here]() \n",
+    "\n",
+    "\tAvailable [here](https://github.com/FelipeVillota/costa-rica-presentation/tree/main/data/merged) \n",
     "\t\n",
     "\tNotes: Dataframes were combined considering geographic disaggregation and time. Leaving us with country-level observations/indicators, by year, from 2018-2014. This is the starting point for the analysis\n"
    ]
